fix line-height and header alignment

--- a/_sass/elements/_typography.scss
+++ b/_sass/elements/_typography.scss
@@ -98,5 +98,3 @@ ul + h3,
 ul + .h3, {
   margin-top: $base-padding-large;
 }
-
-$line-height-caps: 1.2rem;
